fixed select left align

--- a/css-brochure-form/styles.css
+++ b/css-brochure-form/styles.css
@@ -47,11 +47,16 @@ header {
 }
 
 #hiring {
-  padding: 8px 120px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-right: 245px;
   margin-bottom: 8px;
   background-color: rgb(237 236 236 / 57.8%);
   border-radius: 5px;
+  display: flex;
+  justify-content: left;
   align-items: left;
+  text-align: left;
 }
 
 #button {
@@ -70,4 +75,8 @@ header {
 
 input::placeholder {
   padding-left: 5px;
+}
+
+select {
+  text-align: left;
 }
